--- a/DatabaseParser/DatabaseParser/DataBaseParser.csproj
+++ b/DatabaseParser/DatabaseParser/DataBaseParser.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DataGenerator\DataGenerator.csproj" />
+  </ItemGroup>
+
 </Project>
